kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/name: python-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-fury
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: python-app
spec:
  ingressClassName: nginx
  rules:
  - host: python-app.demo.k8s.cloudnative.demoreevo.it
    http:
      paths:
      - backend:
          service:
            name: python-app
            port:
              number: 8000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - python-app.demo.k8s.cloudnative.demoreevo.it
    - notary.demo.k8s.cloudnative.demoreevo.it
    secretName: python-app-cert
